--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,15 +9,17 @@
     <title>About</title>
     <link rel="icon" type="image/x-icon" href="/portfolio/Screenshot 2023-02-25 204057.png">
 </head>
+
 <body>
     <nav>
         <ul>
             <img class="vigivoru" src="Screenshot 2023-02-25 204057.png">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </body>
+
 </html>
