--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <nav>
         <ul>
             <img class="vigivoru" src="Screenshot 2023-02-25 204057.png">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
